Add rdio and other case studies

--- a/other.html
+++ b/other.html
@@ -15,9 +15,9 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton-16col.css">
+  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/animate.css">
 
   <!-- Favicon
@@ -47,11 +47,11 @@
     </script>
 
 </head>
-<body id="other">
+<body>
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
+<div class="splash_other">
   <div class="container wistia">
       <nav>
         <div class="row group">
@@ -72,13 +72,180 @@
     </nav>
     <div class="row group">
       <div class="sixteen columns">
-        <div class="spacer"></div>
-        <h3>Miscellaneous</h3>
-        <div class="subtitle">More work coming soon.</span></div>
+        <h3>Other</h3>
+        <div class="subtitle">Projects from here and there</span></div>
+        <img src="images/other_splash.png" id="audience_splash">
       </div>
     </div>
   </div>
 </div>
+
+  <div class="container other">
+
+    <div class="row group">
+      <div class="offset-by-two twelve columns subnav">
+        <ul>
+          <li><a href="#" data-scroll="streak">STREAK APP</a></li>
+          <li><a href="#" data-scroll="current">CURRENT APP</a></li>
+          <li><a href="#" data-scroll="beautiful">BEAUTIFUL THINGS</a></li>
+          <li><a href="#" data-scroll="donnie">DONNIE DARKO</a></li>
+          <li style="margin-right:0px;"><a href="#" data-scroll="whitney">WHITNEY</a></li>
+        </ul>
+        <div class="separator"></div>
+      </div>
+    </div>
+    <div class="row group">
+      <div class="offset-by-two twelve columns">
+        <section id="streak" data-anchor="streak">
+        <h4>Streak</h4> 
+        <p>Streak is an app concept that I created as part of a responsive interaction design course. Our prompt was relatively flexible—to create a responsive web app that tracks something. I chose to create a simple tool that helps you track and build a new habit with a friend, an idea inspired by my friend <a href="https://twitter.com/arjunblj" target="_blank">Arjun.</a><br><br>
+
+        You start by setting a goal that you’d like to complete each day—for example, walking the dog—and then invite a friend to join your streak by choosing their own goal. Each day, each person must log their goal in order to keep building their shared streak of days. This dual tracking motivates the user to maintain their momentum with the added accountability of not wanting to let down a friend by breaking their streak. Color is the app’s primary feedback system; one user is represented with blue while the other is yellow, and their shared progress is green.</p><br><br>
+        </section>
+      </div>
+    </div>
+    <div class="row group">
+      <div class="offset-by-four eight columns">
+        <iframe width="438" height="930" src="//invis.io/N458TA3S8" frameborder="0" allowfullscreen></iframe>
+      </div>
+    </div>
+    <div class="row group">
+      <div class="offset-by-two twelve columns">
+        <div class="spacer_small"></div>
+        <section id="current" data-anchor="current">
+        <h4>Current</h4>
+        <p>For my senior capstone project at Northeastern University, I'm currently working with a team of three other students on a mobile app concept called Current. In a nutshell, Current is a personal contact management system (CMS). This is a product I’ve wanted to exist for years, and I'm really excited to have the chance to bring the idea to life with my teammates. I lead our team’s user research efforts and contribute to the interface design, particulary for the Groups feature. We aim to design a product that will help you grow and strengthen your inner circle.<br><br>
+
+        Current makes it frictionless to make new connections and effortless to maintain them. Our focus is replacing the act of exchanging business cards with a modern equivalent that leverages mobile technology. The app allows users to quickly exchange personal information cards with other users via QR code, easily add context like where/when you met, and create groups/tasks/reminders for follow up.</p><br>
+      </div>
+    </div>
+    <div class="row group">
+      <div class="offset-by-two six columns">
+        <img src="images/current1.png" class="u-max-full-width img_padding">
+      </div>
+    </div>
+    <div class="row group">
+      <div class="six columns">
+        <img src="images/current2.png" class="u-max-full-width img_padding">
+      </div>
+    </div>
+    </section>
+    <div class="row group">
+      <div class="offset-by-two twelve columns">
+        <section id="beautiful" data-anchor="beautiful">
+        <br><h4>Print Posters</h4>
+        <h5>Beautiful Things</h5>
+        <p>Below are a few posters that I designed for print-focused design courses. The first is both the simplest and my favorite. In typography class, we were asked to create a poster design that could be printed on a letterpress featuring one of our favorite quotes. We then had the opportunity to vote for one poster to print together at a local press. To my delight, my design was selected, and I got to hand print this poster at Union Press in Somerville, MA. As a lifelong letterpress nerd, it was a dream come true.</p><br>
+      </div>
+    </div>
+    <div class="row group">
+      <div class="sixteen columns">
+        <img src="images/other_beautifulthings.png" class="u-max-full-width img_padding_small">
+      </div>
+    </div>
+    </section>
+    <div class="row group">
+      <div class="offset-by-two twelve columns">
+        <section id="donnie" data-anchor="donnie">
+        <br><h5>Donnie Darko</h5>
+        <p>For this project, I was tasked with re-designing the promo poster for one of the university theater program’s past productions. I chose Donnie Darko because it’s also one of my favorite films. This ended up being an extra challenge because the feedback on my earlier versions was that they were too reminiscent of the film. I needed to come up with a visual metaphor that felt true to the plot without relying on the imagery from the movie. This split image photograph represents the parallel universes that drive the story.</p><br>
+      </div>
+    </div>
+    <div class="row group">
+      <div class="sixteen columns">
+        <img src="images/other_donnie.png" class="u-max-full-width img_padding_small">
+      </div>
+    </div>
+    </section>
+    <div class="row group">
+      <div class="offset-by-two twelve columns">
+        <section id="whitney" data-anchor="whitney">
+        <br><h5>Whitney</h5>
+        <p>This piece is a classic typehouse poster for one of my favorite typefaces, Whitney by Tobias Frere-Jones. The uppercase ‘W’ takes center stage as one of Whitney’s most distinctive letterforms, and the dashed lines help to accentuate its humanist slants. The background contains a selection of other characters chosen for their special quirks that make Whitney unique.</p><br>
+      </div>
+    </div>
+    <div class="row group">
+      <div class="sixteen columns">
+        <img src="images/other_whitney.png" class="u-max-full-width img_padding_small">
+      </div>
+    </div>
+    </section>
+
+    <div class="row group">
+      <div class="offset-by-two twelve columns button">
+        <div class="separator"></div>
+        <a href="index.html"><button>Back to all projects</button></a>
+        <footer>
+          <a href="https://twitter.com/maddiesimens"><img src="images/twitter.png" style="width:21px;"></a>    
+          <a href="https://www.instagram.com/maddie_simens/"><img src="images/instagram.png" style="width:19px;"></a>
+          <a href="https://www.linkedin.com/in/madelinesimens"><img src="images/linkedin.png" style="width:21px;"></a>
+          <a href="mailto:maddiesimens@gmail.com?subject=Hello"><img src="images/email.png" style="width:22px; padding-top:2px;"></a>
+        </footer>
+      </div>
+    </div>
+  </div>
+
+  <!-- Scroll to top button -->
+  <a href="#" class="scrollToTop"></a>
+
+
+<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script>
+  $('ul a').on('click', function() {
+
+      var scrollAnchor = $(this).attr('data-scroll'),
+          scrollPoint = $('section[data-anchor="' + scrollAnchor + '"]').offset().top - 28;
+
+      $('body,html').animate({
+          scrollTop: scrollPoint
+      }, 500);
+
+      return false;
+
+  })
+
+
+  $(window).scroll(function() {
+      var windscroll = $(window).scrollTop();
+      if (windscroll >= 100) {
+          $('nav').addClass('fixed');
+          $('.wrapper section').each(function(i) {
+              if ($(this).position().top <= windscroll - 20) {
+                  $('nav a.active').removeClass('active');
+                  $('nav a').eq(i).addClass('active');
+              }
+          });
+
+      } else {
+
+          $('nav').removeClass('fixed');
+          $('nav a.active').removeClass('active');
+          $('nav a:first').addClass('active');
+      }
+
+  }).scroll();
+
+  //Scroll to top button
+  $(document).ready(function(){
+  
+  //Check to see if the window is top if not then display button
+  $(window).scroll(function(){
+    if ($(this).scrollTop() > 100) {
+      $('.scrollToTop').fadeIn();
+    } else {
+      $('.scrollToTop').fadeOut();
+    }
+  });
+  
+  //Click event to scroll to top
+  $('.scrollToTop').click(function(){
+    $('html, body').animate({scrollTop : 0},800);
+    return false;
+  });
+  
+});
+  </script>
+
 
 
     <!-- End Document
