--- a/other.html
+++ b/other.html
@@ -112,7 +112,7 @@
     <div class="row group">
       <div class="offset-by-two twelve columns">
         <section id="current" data-anchor="current">
-        <h4>Current</h4>
+        <br><h4>Current</h4>
         <p>For my senior capstone project at Northeastern University, I'm currently working with a team of three other students on a mobile app concept called Current. In a nutshell, Current is a personal contact management system (CMS). This is a product I’ve wanted to exist for years, and I'm really excited to have the chance to bring the idea to life with my teammates. I lead our team’s user research efforts and contribute to the interface design, particulary for the Groups feature. We aim to design a product that will help you grow and strengthen your inner circle.<br><br>
 
         Current makes it frictionless to make new connections and effortless to maintain them. Our focus is replacing the act of exchanging business cards with a modern equivalent that leverages mobile technology. The app allows users to quickly exchange personal information cards with other users via QR code, easily add context like where/when you met, and create groups/tasks/reminders for follow up.</p><br>
