Fix broken splash image sizing

--- a/other.html
+++ b/other.html
@@ -74,7 +74,7 @@
       <div class="sixteen columns">
         <h3>Other</h3>
         <div class="subtitle">Projects from here and there</span></div>
-        <img src="images/other_splash.png" id="audience_splash">
+        <img src="images/other_splash.png" class="splash_image">
       </div>
     </div>
   </div>
