--- a/rdio.html
+++ b/rdio.html
@@ -74,7 +74,7 @@
       <div class="sixteen columns">
         <h3>Rdio</h3>
         <div class="subtitle">Music, tuned to you</div>
-        <img src="images/rdio_splash.png" id="audience_splash">
+        <img src="images/rdio_splash.png" class="splash_image">
       </div>
     </div>
   </div>
