--- a/wistia.html
+++ b/wistia.html
@@ -75,7 +75,7 @@
         <div class="sixteen columns">
           <h3>Wistia</h3>
           <div class="subtitle">Helping businesses do more with video</div>
-          <img src="images/audience_splash.png" id="audience_splash">
+          <img src="images/audience_splash.png" class="splash_image">
         </div>
       </div>
     </div>
