Adding sticky navbar and copy edits

--- a/other.html
+++ b/other.html
@@ -98,7 +98,7 @@
       <div class="offset-by-two twelve columns">
         <section id="streak" data-anchor="streak">
         <h4>Streak</h4> 
-        <p>Streak is an app concept that I created as part of a responsive interaction design course. Our prompt was relatively flexible—to create a responsive web app that tracks something. I chose to create a simple tool that helps you track and build a new habit with a friend, an idea inspired by my friend <a href="https://twitter.com/arjunblj" target="_blank">Arjun.</a><br><br>
+        <p>Streak is an app concept that I created as part of an interaction design course. Our prompt was to create a responsive web app that tracks something so I chose to create a simple tool that helps you track and build a new habit with a friend, an idea inspired by my friend <a href="https://twitter.com/arjunblj" target="_blank">Arjun.</a><br><br>
 
         You start by setting a goal that you’d like to complete each day—for example, walking the dog—and then invite a friend to join your streak by choosing their own goal. Each day, each person must log their goal in order to keep building their shared streak of days. This dual tracking motivates the user to maintain their momentum with the added accountability of not wanting to let down a friend by breaking their streak. Color is the app’s primary feedback system; one user is represented with blue while the other is yellow, and their shared progress is green.</p><br><br>
         </section>
@@ -113,9 +113,7 @@
       <div class="offset-by-two twelve columns">
         <section id="current" data-anchor="current">
         <br><h4>Current</h4>
-        <p>For my senior capstone project at Northeastern University, I'm currently working with a team of three other students on a mobile app concept called Current. In a nutshell, Current is a personal contact management system (CMS). This is a product I’ve wanted to exist for years, and I'm really excited to have the chance to bring the idea to life with my teammates. I lead our team’s user research efforts and contribute to the interface design, particulary for the Groups feature. We aim to design a product that will help you grow and strengthen your inner circle.<br><br>
-
-        Current makes it frictionless to make new connections and effortless to maintain them. Our focus is replacing the act of exchanging business cards with a modern equivalent that leverages mobile technology. The app allows users to quickly exchange personal information cards with other users via QR code, easily add context like where/when you met, and create groups/tasks/reminders for follow up.</p><br>
+        <p>For my senior capstone project, I'm currently working with a team of three other students on a mobile app concept called Current. In a nutshell, Current is a personal contact management system (CMS). Current's goal is to make it frictionless to create new connections and effortless to maintain them. Our focus is replacing the act of exchanging business cards with a modern equivalent that leverages mobile technology. The app allows users to quickly exchange personal information cards with other users via QR code, easily add context like where/when you met, and create groups/tasks/reminders for follow up.<br><br>
       </div>
     </div>
     <div class="row group">
