Return marvel prototypes

--- a/rdio.html
+++ b/rdio.html
@@ -269,7 +269,7 @@
     <div class="container rdio">
       <div class="row group">
         <div class="eight columns" style="padding-top:20px;">
-          <!-- <iframe src="https://marvelapp.com/60dhe7?emb=1" width="402" height="823" allowTransparency="true" frameborder="0"></iframe> -->
+          <iframe src="https://marvelapp.com/60dhe7?emb=1" width="402" height="823" allowTransparency="true" frameborder="0"></iframe>
           <div class="spacer_small"></div>
         </div>
       </div>
@@ -311,7 +311,7 @@
       <div class="row group">
         <div class="eight columns">
           <div class="spacer_small"></div>
-          <!-- <iframe src="https://marvelapp.com/92a21j?emb=1" width="402" height="823" allowTransparency="true" frameborder="0"></iframe> -->
+          <iframe src="https://marvelapp.com/92a21j?emb=1" width="402" height="823" allowTransparency="true" frameborder="0"></iframe>
           <div class="spacer_small"></div>
         </div>
       </div>
@@ -418,7 +418,7 @@
       <div class="row group">
         <div class="eight columns">
           <div class="spacer_small"></div>
-          <!-- <iframe src="https://marvelapp.com/3hi1cj?emb=1" width="402" height="823" allowTransparency="true" frameborder="0"></iframe> -->
+          <iframe src="https://marvelapp.com/3hi1cj?emb=1" width="402" height="823" allowTransparency="true" frameborder="0"></iframe>
           <div class="spacer_small"></div>
         </div>
       </div>
