Change index color palette

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Maddie Simens</title>
-  <meta name="description" content="">
+  <meta name="description" content="Hey, I'm Maddie. Product design is my thing. This is some of my work.">
   <meta name="author" content="">
 
   <!-- Mobile Specific Metas
@@ -92,8 +92,8 @@
         <div class="eight columns thumb" id="preview4">
           <a href="mailto:maddiesimens@gmail.com?subject=Hello" onclick="trackOutboundLink('mailto:maddiesimens@gmail.com?subject=Hello');">
           <div class=" animated fadeIn four">
-            <img src="images/preview4.png" class="u-max-full-width">
-            <div id="cta">I've met some of my favorite<br>people over a cup of coffee.<br><br><span style="text-decoration:underline;">maddiesimens@gmail.com</span></div>
+            <img src="images/preview4a.png" class="u-max-full-width">
+            <div id="cta">I've met some of my favorite<br>people over a cup of coffee.<br><br><span style="color:white; text-decoration:underline;">maddiesimens@gmail.com</span></div>
           </div>
           </a>
       </div>
