--- a/other.html
+++ b/other.html
@@ -85,7 +85,7 @@
       <li id="streak"><a href="#" data-scroll="streak">STREAK APP</a></li>
       <li id="beautiful"><a href="#" data-scroll="beautiful">BEAUTIFUL THINGS</a></li>
       <li id="donnie"><a href="#" data-scroll="donnie">DONNIE DARKO</a></li>
-      <li style="margin-right:0px;" id="whitney"><a href="#" data-scroll="whitney">WHITNEY</a></li>
+      <li style="margin-right:0px;" id="whitney"><a href="#" data-scroll="whitney">WHITNEY TYPEFACE</a></li>
     </ul>
     <div class="separator"></div>
   </div>
