Final polish tweaks

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="eight columns thumb" id="preview4">
           <a href="mailto:maddiesimens@gmail.com?subject=Hello" onclick="trackOutboundLink('mailto:maddiesimens@gmail.com?subject=Hello');">
           <div class=" animated fadeIn four">
-            <img src="images/preview4a.png" class="u-max-full-width">
+            <img src="images/preview4.png" class="u-max-full-width">
             <div id="cta">I've met some of my favorite<br>people over a cup of coffee.<br><br><span style="color:white; text-decoration:underline;">maddiesimens@gmail.com</span></div>
           </div>
           </a>
